# Azure-SQL-MCP

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
src/azure_sql_mcp/: __init__.py  connector.py  server.py
src/azure_sql_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
